examples/good/float_and_double.hmy
service_name: FloatAndDouble
service_version: 1.0.0

struct Struct1 {
  f : Float,
  d : Double
}

resource Struct1 ("/struct")
