examples/bad/name_clash.hmy
service_name: MapService
service_version: 1.0.0
 
struct MapEntry {
  @PK
  key : String,
  key : String
}
 
resource MapEntry ("/map") 
